Fixed Layout issues

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -315,3 +315,6 @@ th {
 	  text-align: center;
   }
  
+  .logo {
+	  min-width: 200px;
+  }
